--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 google-api-python-client = "^2.127.0"
 google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.0"
+web-pdb = "^1.6.2"
 
 [build-system]
 requires = ["poetry-core"]
